# spark-profiler

./: .bandit  .env  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .releaserc.json  ADVANCED_STATISTICS.md  CHANGELOG.md  CI_CD_IMPROVEMENTS.md  CLAUDE.md  LICENSE  Makefile  PACKAGE_RENAME_PLAN.md  PACKAGING_PLAN.md  PACKAGING_SUMMARY.md  PANDAS_OUTPUT_DESIGN.md  PYPI_SETUP.md  README.md  RELEASING.md  SECURITY.md  SIMPLIFICATION_PLAN.md  SIMPLIFICATION_SUMMARY.md  SPARK_SETUP_FIXES.md  TROUBLESHOOTING.md  pandas-output-feature.patch  pyproject.toml  verify_pandas_output.py
.claude/commands/: infinite.md  prime.md
.github/: mlc_config.json
.github/workflows/: auto-format.yml  ci.yml  codeql.yml  dependency-check.yml  dependency-update.yml  docs.yml  release.yml  security-comment.yml  semantic-release.yml  version-bump.yml
docs/: README.md  exception_handling.md  version-management.md
docs/source/: api_reference.rst  changelog.md  conf.py  contributing.md  examples.md  index.rst  installation.md  quickstart.md  user_guide.md
examples/: advanced_statistics_demo.py  basic_usage.py  caching_demo.py  installation_verification.py  pandas_output_example.py  progress_tracking_example.py  sampling_example.py  simple_api_example.py
pyspark_analyzer/: __init__.py  api.py  caching.py  calculators.py  performance.py  profiler.py  progress.py  quality.py  sampling.py  statistics.py  utils.py
scripts/: bump_version.py  diagnose_java.py  publish_to_testpypi.sh  run_tests.sh  setup-dev.sh  setup_test_environment.sh  test_package_build.sh  verify_fixes.py
spark_profiler/: __init__.py  performance.py  profiler.py  sampling.py  statistics.py  utils.py
tests/: __init__.py  conftest.py  test_advanced_statistics.py  test_api.py  test_caching.py  test_integration.py  test_pandas_output.py  test_performance.py  test_profiler.py  test_progress.py  test_sampling.py  test_security.py  test_statistics.py  test_utils.py
